# ni-population-analyses

./: .gitignore  Home.py  README.md  requirements.txt  streamlit_app.py  style.css
.devcontainer/: devcontainer.json
data/: AllDeathsInjections.pkl  MonthlyDisabilityRegistrationsAndInjectionsNov2022.pkl
data/births/: AllBirthsUpToJan2023.pkl  AllBirthsUpToMonth32023.pkl  AllBirthsUpToMonth82023.pkl  MeanBirthDifference2020to20203April.pkl  (+1 more)
olap-db/: pyproject.toml
olap-db/olap_db/: main.py
pages/: 1_Weekly_Deaths.py  2_Monthly_Births.py  3_Cause_of_Death.py  3_Disabilities.py  4_Cause_of_Death.py  4_Countermeasures.py  4_Injections.py  5_Countermeasures.py  5_Impact.py  6_Impact.py
util-lib/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
util-lib/src/util_lib/: __init__.py  bag.py  dataframe.py  date.py  date_help.py  df_help.py  error.py  errors.py  file.py  graph.py  invalid_json_schema.json  logging.py  notebook.py  primitive.py
util-lib/tests/: basic_test.py  dataframe_test.py  date_help_test.py  date_test.py  df_help_test.py  file_test.py  graph_test.py  primitive_test.py
util-lib/tests/resources/dataframe_test/: valid_workbook.xlsx
web-dev/: NI-Births-Monthly.ipynb  NI-Deaths-Tabulated.ipynb  NI-Deaths-Weekly-2024.ipynb  NI-Deaths-Weekly-June-2023.ipynb  NI-Deaths-Weekly.ipynb  NI-Injections-Weekly-Deaths.ipynb  NI-PIP-Registrations.ipynb  ni-deaths-cause-source-excel-file-list.json  utility_functions.py
web-ui/: Home.py  pyproject.toml
web-ui/lib/: page_utils.py
web-ui/pages/: 1_Weekly_Deaths.py  2_Monthly_Births.py  3_Disabilities.py  4_Cause_of_Death.py  5_Countermeasures.py  6_Impact.py  7_About.py
web-ui/resources/data/: AllDeathsInjections_archive.pkl
web-ui/resources/data/births/: AllBirthsUpToDec2022.pkl  AllBirthsUpToFeb2023.pkl  AllBirthsUpToMonth22024.pkl  AllBirthsUpToMonth52023.pkl  MeanBirthDifference2020to20203_5.pkl  MeanBirthDifference2020to20204_2.pkl
web-ui/resources/data/deaths/: AllDeathsUpAndStatsTo2024Week31.pkl  AllDeathsUpAndStatsTo2024Week34.pkl  AllDeathsUpTo2023Week14.pkl  AllDeathsUpTo2023Week20.pkl  AllDeathsUpTo2023Week23.pkl  AllDeathsUpTo2023Week24.pkl  AllDeathsUpTo2023Week44.pkl  AllDeathsUpTo2023Week46.pkl  AllDeathsUpTo2023Week47.pkl  AllDeathsUpTo2023Week48.pkl  AllDeathsUpTo2023Week49.pkl  AllDeathsUpTo2023Week50.pkl  AllDeathsUpTo2024Week17.pkl  AllDeathsUpTo2024Week20.pkl  AllDeathsUpTo2024Week30.pkl  AllDeathsUpTo2024Week31.pkl  DeathsByCauseUpToQ42022.pkl  PandemicPeriodWeeklyDeathsUpToWeek12.pkl  PandemicPeriodWeeklyDeathsUpToWeek21.pkl  PandemicPeriodWeeklyDeathsUpToWeek24.pkl  PandemicPeriodWeeklyDeathsUpToWeek25.pkl
web-ui/resources/data/disabilities/: MonthlyDisabilityRegistrationsNov2022.pkl
web-ui/resources/data/injections/: CumulativeInjectionsUpTo2Dec2023.pkl  CumulativeInjectionsUpToApril2024.pkl
web-ui/resources/data/injections/pfizer-biontech/: CombinedClinicalTrialDeathsBreakdown.pkl
(+16 files in other folders)
