[tool.poetry]
name = "olap-db"
version = "0.1.0"
description = ""
authors = ["Darragh McConville at Arqiva <darragh.mcconville@arqiva.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "1.1.2"
python-dotenv = "^1.0.1"
certifi = "^2024.8.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
