[tool.poetry]
name = "web-ui"
version = "0.1.0"
description = "Web application for viewing and interacting with Northern Ireland pandemic period population data."
authors = ["Darragh McConville"]
readme = "README.md"
packages = []
include = ["**/*"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
plotly = "^5.22.0"
matplotlib = "^3.8.4"
st-pages = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
